Update Code for Java 8